--- a/index.html
+++ b/index.html
@@ -335,6 +335,133 @@ Web インターフェースから、<br>ぽちぽちっと操作するだけで
 </ul>
 </section>
 
+<section>
+<h2>使ったソフトウェア</h2>
+<p>
+Apache CloudStack
+</p>
+<small>
+最初はOpenCloud を使う予定だったが, あんまりうまく行かなかったので変更.<br />
+CloudStack は適当にインストールした後は, Web から設定できて簡単！
+</small>
+</section>
+
+<section>
+  <h2>今日の</h2>
+<ul>
+<li>
+事の発端
+</li>
+<li>
+クラウド？
+</li>
+<li>
+<span class="red">現状</span>
+</li>
+<li>
+利用法
+</li>
+<li>
+今後
+</li>
+</ul>
+</section>
+
+<section>
+<h2>こんな画面</h2>
+<p>
+Web からだいたいできる.<br />
+<img src="img/user.png" width="1018" height="758">
+</p>
+</section>
+
+<section>
+<h2>こんな画面</h2>
+<p>
+インスタンスの起動もWeb から.<br />
+<img src="img/instance.png" width="1011" height="564">
+</p>
+</section>
+
+<section>
+<h2>あああああ</h2>
+<p>
+  ああああ
+</p>
+</section>
+
+<section>
+  <h2>今日の</h2>
+<ul>
+<li>
+事の発端
+</li>
+<li>
+クラウド？
+</li>
+<li>
+現状
+</li>
+<li>
+<span class="red">利用法</span>
+</li>
+<li>
+今後
+</li>
+</ul>
+</section>
+
+<section>
+  <h2>ふつうにVPS っぽく使ったり</h2>
+<p>
+  私は2048 AI コンテストの為に良い評価関数を探すのに最近使っています。
+</p>
+</section>
+
+<section>
+  <h2>危険なことや</h2>
+<p>
+  IRC で入力した任意のコマンドを実行するIRC bot とか作った。<br />
+  %kmc-shell<br />
+  <img src="img/shell.png" width="585" height="326">
+</p>
+</section>
+
+<section>
+  <h2>Jenkins のワーカーにしたり</h2>
+<p>
+まいにちGCC とClang のビルドをしてもring が重くならない！
+</p>
+</section>
+
+<section>
+  <h2>なんか良い使い方考えてください</h2>
+<p>
+  全てはあなたの自由です！
+</p>
+</section>
+
+<section>
+  <h2>今日の</h2>
+<ul>
+<li>
+事の発端
+</li>
+<li>
+クラウド？
+</li>
+<li>
+現状
+</li>
+<li>
+<span class="red">利用法</span>
+</li>
+<li>
+今後
+</li>
+</ul>
+</section>
+
 
 </div> <!-- class="slides" -->
 </div> <!-- class="reveal" -->
@@ -361,8 +488,8 @@ Web インターフェースから、<br>ぽちぽちっと操作するだけで
         // Optional libraries
         dependencies: [
             { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
-            { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-            { src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+            <!-- { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },  -->
+            <!-- { src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } } -->
         ]
     });
 
