だいたいできてきた

--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@ nona7
 
 </section>
 
+<section>
+<h2>けいこく</h2>
+
+このスライドは、土曜日のOB 会で話すスライドを試してみるアレです。<br />
+なんかアレだったところを突っ込んでくれたら嬉しいような気がします。
+</section>
+
 
 <section>
 <h2>自己紹介</h2>
@@ -368,9 +375,15 @@ CloudStack は適当にインストールした後は, Web から設定できて
 </section>
 
 <section>
-<h2>こんな画面</h2>
 <p>
-Web からだいたいできる.<br />
+<img src="img/photo.jpg" width="1136" height="852">
+</p>
+</section>
+
+
+<section>
+<h2>全部Web フォームから</h2>
+<p>
 <img src="img/user.png" width="1018" height="758">
 </p>
 </section>
@@ -384,9 +397,9 @@ Web からだいたいできる.<br />
 </section>
 
 <section>
-<h2>あああああ</h2>
+<h2>インスタンス立ててssh する</h2>
 <p>
-  ああああ
+  じつえん～
 </p>
 </section>
 
@@ -454,10 +467,85 @@ Web からだいたいできる.<br />
 現状
 </li>
 <li>
-<span class="red">利用法</span>
+利用法
 </li>
 <li>
-今後
+<span class="red">今後</span>
+</li>
+</ul>
+</section>
+
+<section>
+  <h2>いろんな問題点 - その1</h2>
+<p>
+  単一障害点だらけ
+</p>
+</section>
+
+<section>
+  <h3>単一障害点だらけ</h3>
+<p>
+<ul>
+<li>
+ネットワーク - 一つのハブにつながってる
+</li>
+<li>
+マネージメントノード - これは複数建てられる
+</li>
+<li>
+電源 - UPS ほしいなぁ
+</li>
+<li>
+<span class="red">HDD - さすがにこれだけはなんとかしたい</span>
+</li>
+</ul>
+  
+</p>
+</section>
+
+<section>
+  <h2>いろんな問題点 - その2</h2>
+<p>
+  部室の外からは繋ぎにくい。
+</p>
+<p>
+  近いうちに何とかします。
+</p>
+<p>
+  部室からは <a href=" https://akatsuki/client/">https://akatsuki/client/</a> <small> (SSL 警告が出ます) </small>
+</p>
+</section>
+
+
+<section>
+  <h2>いろんな問題点 - その3</h2>
+<p>
+  ドキュメントをぜんぜん書いていない……
+</p>
+<p>
+  ハンドブックの管理/ネットワーク/VPS にちょっとあるぐらい……
+</p>
+<small>
+  このスライドが数少ないドキュメントになってるレベル
+</p>
+</small>
+</section>
+
+<section>
+  <h2>最大の問題</h2>
+<p>
+  あんまり知られていない。
+</p>
+<small>
+  宣伝しに来ました。
+</small>
+</section>
+
+<section>
+  <h2>こまごま</h2>
+<ul>
+<li>
+Web からコンソール使いにくい… - ささっとsshd の設定だけしてssh しましょう。
 </li>
 </ul>
 </section>
