--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <link rel="stylesheet" href="lib/css/zenburn.css">
     <style type="text/css">
       <!--
-          .red{ color: red; };
+          .red{ color: yellow; };
         -->
-    </style>
+    </style><!-- 許してくれ -->
     
   </head>
 
